// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing performance-section component Render performance-section with issues 1`] = `
<section-container-stub>
  <div
    class="section__header--stats px2 py1"
  >
    <performance-score-stub
      score="0.89"
      type="Mobile"
    />
     
    <performance-score-stub
      score="0.89"
      type="Desktop"
    />
  </div>
</section-container-stub>
`;

exports[`Testing performance-section component Render performance-section with no issues 1`] = `
<section-container-stub>
  <div
    class="section__header--stats px2 py1"
  >
    <performance-score-stub
      score="1"
      type="Mobile"
    />
     
    <performance-score-stub
      score="1"
      type="Desktop"
    />
  </div>
</section-container-stub>
`;
